--- a/ueventd.rk30board.rc
+++ b/ueventd.rk30board.rc
@@ -13,14 +13,14 @@
 /dev/vpu                  0660   system     system
 /dev/vpu_service          0666   system     system
 /dev/vpu_mem              0666   system     system
-/dev/rk29-ipp             0666   system     system   
+/dev/rk29-ipp             0666   system     system
 /dev/rga                  0666   system     system
 
 # for Sensor HAL
 /dev/akm8973              0660   system     system
 /dev/accelerometer        0660   system     system
 
-# for mpu gyroscope 
+# for mpu gyroscope
 /dev/mpu                  0660   system     system
 /dev/mpuirq               0660   system     system
 /dev/timerirq             0660   system     system
@@ -49,7 +49,7 @@
 
 # for mali
 /dev/mali           	  0666   system   	 system
-/dev/ump           	  0666   system   	 system
+# /dev/ump           	  0666   system   	 system
 
 # for sgx
 /dev/pvrsrvkm         0666   system      system
@@ -67,4 +67,4 @@
 #/sys/class/misc/hdcp/enable     disable     0664  root   system
 
 #for DRM
-/dev/rknand_sys_storage   0660   system     system 
+/dev/rknand_sys_storage   0660   system     system
